--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -3,6 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize">
+    <Button
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/nav_button"
+        android:layout_marginStart="10dp"
+       android:layout_alignParentStart="true"
+        android:background="@drawable/ic_activity_main_back"
+        android:layout_centerVertical="true"/>
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
