--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -6,45 +6,54 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     tools:context=".WeatherActivity">
+
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/bing_pic_img"
-        android:scaleType="centerCrop"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop" />
+
     <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/drawer_layout">
+        android:layout_height="match_parent">
 
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/swipe_refresh">
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/weather_layout"
-    android:scrollbars="vertical"
-    android:overScrollMode="always">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:fitsSystemWindows="true">
-        <include layout="@layout/title"/>
-        <include layout="@layout/now"/>
-        <include layout="@layout/forecasat"/>
-        <include layout="@layout/aqi"/>
-        <include layout="@layout/suggestion"/>
-    </LinearLayout>
-</ScrollView>
-    </android.support.v4.widget.SwipeRefreshLayout>
-        <fragment
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content">
+
+            <ScrollView
+                android:id="@+id/weather_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:overScrollMode="always"
+                android:scrollbars="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fitsSystemWindows="true"
+                    android:orientation="vertical">
+
+                    <include layout="@layout/title" />
+
+                    <include layout="@layout/now" />
+
+                    <include layout="@layout/forecasat" />
+
+                    <include layout="@layout/aqi" />
+
+                    <include layout="@layout/suggestion" />
+                </LinearLayout>
+            </ScrollView>
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+        <fragment
             android:id="@+id/choose_area_fragment"
             android:name="com.android.byc.coolweather.ChooseAreaFragment"
-            tools:layout_gravity="start"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </android.support.v4.widget.DrawerLayout>
 </FrameLayout>
