--- a/app/src/main/res/layout/forecasat.xml
+++ b/app/src/main/res/layout/forecasat.xml
@@ -6,18 +6,20 @@
     android:orientation="vertical"
     android:layout_margin="15dp"
     android:background="#8000">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="15dp"
-    android:layout_marginTop="15dp"
-    android:text="预报"
-    android:textColor="#fff"
-    android:textSize="20sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:text="预报"
+        android:textColor="#fff"
+        android:textSize="20sp"/>
+
     <LinearLayout
         android:id="@+id/forecasat_layout"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </LinearLayout>
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
